ma che stamo a fa

--- a/src/QuantumComputing.tex
+++ b/src/QuantumComputing.tex
@@ -1134,34 +1134,89 @@ Now, we are going to define an addition operator called $U$ as such: let $U$ be 
     \item also, a geometric interpretation of the scalar product is that we are measuring the cosine of the angle between $\ket t$ and $\ket{Us}$, and we want this value to be very high (such that the angle woule be very small) --- we obeserve that we are in Hilbert spaces so the notion of \curlyquotes{angle} is not the same of the one we are used to with Euclidean spaces, but this is just to have an idea of what is happening with $U$
 \end{itemize}
 
-Moreover, define the following operator $$G := U R_s U^\dag R_t U$$ Let's see what happens when we evaluate $G \ket s$. By denoting $U_{ts} = \braket{t|Us}$, it can be shown that $$G \ket s = U \ket s \sbk{e^{i\theta} + \abs{U_{jts}}^2  \rbk{e^{i \theta }-1}^2} + \ket t U_{ts}\rbk{e^{i \theta} - 1}$$ (we will skip the details of the calculations). Assuming this is correct, to compute how close this state is to $\ket t$ we need to evaluate the following:
-\begin{equation*}
-    \begin{alignedat}{2}
-        \Pr[\mbox{measure}\rbk{G \ket s} = \ket t] & = \abs{\braket{t|Gs}}^2 & \\ 
-                                                   & = \abs{\bra t \sbk{U \ket s \rbk{e^{i\theta} + \abs{U_{jts}}^2  \rbk{e^{i \theta} - 1}^2} + \ket t U_{ts}\rbk{e^{i \theta} - 1}}}^2 & \\ 
-                                                   & = \abs{\braket{t|Us} \rbk{e^{i\theta} + \abs{U_{ts}}^2  \rbk{e^{i \theta } - 1}^2 }+ \braket{t|t} U_{ts}\rbk{e^{i \theta} - 1}}^2 & \\ 
-                                                   & = \abs{U_{ts} \rbk{e^{i\theta} + \abs{U_{ts}}^2  \rbk{e^{i \theta } - 1}^2 }+ U_{ts}\rbk{e^{i \theta} - 1}}^2 & \\ 
-                                                   & = \abs{U_{ts} \sbk{2e^{i\theta} - 1 + \abs{U_{ts}}^2 \rbk{e^{i \theta} - 1}^2}}^2 & \\ 
-                                                   & = \abs{U_{ts}}^2 \cdot \abs{2e^{i\theta} - 1 + \abs{U_{ts}}^2 \rbk{e^{i \theta} - 1}^2}^2 & \\ 
-                                                   & = (1 - \varepsilon) \cdot \abs{2e^{i\theta} - 1 + (1 - \varepsilon)\rbk{e^{i \theta} - 1}^2}^2 & \quad \rbk{\abs{U_{ts}}^2 = 1 - \varepsilon}\\ 
-    \end{alignedat}
-\end{equation*}
+Moreover, define the following operator $$G := U R_s U^\dag R_t U$$ Let's see what happens when we evaluate $G \ket s$. By denoting $U_{ts} = \braket{t|Us}$, we can prove the following equality.
 
-Now, let's see what happens if we set $\theta = \tfrac{\pi}{3}$: we obtain that
-\begin{equation*}
-    \begin{alignedat}{2}
-        \Pr[\mbox{measure}\rbk{G \ket s} = \ket t] & = (1 - \varepsilon) \cdot \abs{2e^{i \tfrac{\pi}{3}} - 1 + (1 - \varepsilon)\rbk{e^{i\tfrac{\pi}{3}} - 1}^2}^2 & \\ 
-                                                   & = (1 - \varepsilon) \cdot \abs{2e^{i \tfrac{\pi}{3}} - 1 - (1 - \varepsilon){i \tfrac{\pi}{3}}}^2 & \quad \rbk{\rbk{e^{i\tfrac{\pi}{3}} - 1}^2 = - e^{i \tfrac{\pi}{3}}} & \\ 
-                                                   & = (1 - \varepsilon) \cdot \abs{(1 + \varepsilon) e^{i \tfrac{\pi}{3}} - 1}^2 & \\ 
-                                                   & = (1 - \varepsilon) \cdot \abs{(1 + \varepsilon)\rbk{\dfrac{1}{2} + i \dfrac{\sqrt 4}{2}} - 1}^2 & \quad (\mbox{by Euler's formula}) & \\ 
-                                                   & = (1 - \varepsilon) \cdot \abs{\dfrac{1}{2} +i  \dfrac{\sqrt 3}{2} + \dfrac{\varepsilon}{2} + i \dfrac{\sqrt 3}{2} \varepsilon - 1}^2 & \\ 
-                                                   & = (1 - \varepsilon) \cdot \abs{\dfrac{\varepsilon}{2} - \dfrac{1}{2} + i \dfrac{\sqrt 3}{2}(1 + \varepsilon)}^2 &  \\ 
-                                                   & = (1 - \varepsilon) \cdot \sbk{\rbk{\dfrac{\varepsilon}{2} - \dfrac{1}{2}}^2 + \rbk{\dfrac{\sqrt 3}{2}(1 + \varepsilon)}^2 } & \quad \rbk{\abs{z}^2 = \Re^2(z) + \Im^2(z)} \\ 
-                                                   & = (1 - \varepsilon) \cdot (1 + \varepsilon + \varepsilon^2)&  \\ 
-                                                   & = 1 + \varepsilon + \varepsilon^2 - \varepsilon - \varepsilon^2 - \varepsilon^3 & \\ 
-                                                   & = 1 - \varepsilon^3 & \\ 
-    \end{alignedat}
-\end{equation*}
+\begin{framedlem}{}
+ It holds that $$G \ket s = U \ket s \sbk{e^{i\theta} + \abs{U_{ts}}^2  \rbk{e^{i \theta }-1}^2} + \ket t U_{ts}\rbk{e^{i \theta} - 1}$$
+\end{framedlem}
+
+\begin{proof}
+    Let $P_s = \ket s \bra s$ and $P_t = \ket t \bra t$; thus, we have that
+    \begin{equation*}
+        \begin{alignedat}{2}
+            G & = U R_s U^\dag R_t U & \\ 
+              & = U(I - (1 - e^{i\theta})P_s)U^\dag(I - (1 - e^{i\theta})P_t)U & \\ 
+              & = (U - (1 - e^{i\theta})UP_s)U^\dag(U - (1 - e^{i\theta})UP_t) & \\ 
+              & = (UU^\dag - (1 - e^{i\theta}) UP_sU^\dag)(U - (1 - e^{i\theta})UP_t) & \\ 
+              & = (I - (1 - e^{i \theta})UP_sU^\dag)(U - (1 - e^{i\theta})UP_t) & \quad (UU^\dag = I) \\ 
+              & = U - (1 - e^{i \theta}) P_tU - (1 - e^{i \theta})UP_s + (1 - e^{i\theta})^2 UP_s U^\dag P_t U & \\ 
+        \end{alignedat}
+    \end{equation*}
+    Hence, we can evaluate $G \ket s$ as follows:
+    \begin{equation*}
+        \hspace{-1.3cm}
+        \begin{alignedat}{2}
+            G \ket s & = \rbk{U - (1 - e^{i \theta}) P_tU - (1 - e^{i \theta})UP_s + (1 - e^{i\theta}) UP_s U^\dag P_t U} \ket s & \\ 
+                     & = U \ket s - (1 - e^{i \theta}) P_tU \ket s- (1 - e^{i \theta})UP_s \ket s + (1 - e^{i\theta})^2 UP_s U^\dag P_t U \ket s & \\  
+                     & = U \ket s - (1 - e^{i \theta}) \ket t U_{ts} - (1 - e^{i\theta}) U \ket s + (1 - e^{i\theta})^2 U \ket s \bra s U^\dag \ket t U_{ts} & \\ 
+                     & = U \ket s - (1 - e^{i \theta}) \ket t U_{ts} - (1 - e^{i \theta}) U \ket s + (1 - e^{i \theta})^2 U \ket s \braket{s|U^\dag t} U_{ts} & \\ 
+                     & = U \ket s - (1 - e^{i \theta}) \ket t U_{ts} - (1 - e^{i \theta}) U \ket s + (1 - e^{i \theta})^2 U \ket s \braket{Us|t} U_{ts} & \quad (\mbox{by def. of adjoint}) \\ 
+                     & = U \ket s - (1 - e^{i \theta}) \ket t U_{ts} - (1 - e^{i \theta}) U \ket s + (1 - e^{i \theta})^2 U \ket s \overline{\braket{t|Us}} U_{ts} & \quad (\mbox{by prop. of scalar products}) \\ 
+                     & = U \ket s - (1 - e^{i \theta}) \ket t U_{ts} - (1 - e^{i \theta}) U \ket s + (1 - e^{i \theta})^2 U \ket s \overline{U_{ts}} U_{ts} & \\ 
+                     & = U \ket s - (1 - e^{i \theta}) \ket t U_{ts} - (1 - e^{i \theta}) U \ket s + (1 - e^{i \theta})^2 U \ket s \abs{U_{ts}}^2 & \quad (z \cdot \overline z = \abs{z}^2)\\ 
+                     & = \ldots & \quad (\mbox{algebraic manipulation}) \\ 
+                     & = U \ket s \sbk{e^{i\theta} + \abs{U_{ts}}^2  \rbk{e^{i \theta }-1}^2} + \ket t U_{ts}\rbk{e^{i \theta} - 1} & \\ 
+        \end{alignedat}
+    \end{equation*}
+\end{proof}
+
+Most importantly, this equality can be used in the following proposition, which shows that we can actually find an angle $\theta$ for which the distance from $\ket t$ decreases significantly.
+
+\begin{framedprop}{}
+    There exists an angle $\theta$ such that $$\Pr[\mbox{measure}(G \ \ket s) = \ket t] = 1 - \varepsilon^3$$
+\end{framedprop}
+
+\begin{proof}
+    Thanks to the previous lemma, we obtain that
+    \begin{equation*}
+        \hspace{-1cm}
+        \begin{alignedat}{2}
+            \Pr[\mbox{measure}\rbk{G \ket s} = \ket t] & = \abs{\braket{t|Gs}}^2 & \\ 
+                                                       & = \abs{\bra t \sbk{U \ket s \rbk{e^{i\theta} + \abs{U_{jts}}^2  \rbk{e^{i \theta} - 1}^2} + \ket t U_{ts}\rbk{e^{i \theta} - 1}}}^2 & \\ 
+                                                       & = \abs{\braket{t|Us} \rbk{e^{i\theta} + \abs{U_{ts}}^2  \rbk{e^{i \theta } - 1}^2 }+ \braket{t|t} U_{ts}\rbk{e^{i \theta} - 1}}^2 & \\ 
+                                                       & = \abs{U_{ts} \rbk{e^{i\theta} + \abs{U_{ts}}^2  \rbk{e^{i \theta } - 1}^2 }+ U_{ts}\rbk{e^{i \theta} - 1}}^2 & \\ 
+                                                       & = \abs{U_{ts} \sbk{2e^{i\theta} - 1 + \abs{U_{ts}}^2 \rbk{e^{i \theta} - 1}^2}}^2 & \\ 
+                                                       & = \abs{U_{ts}}^2 \cdot \abs{2e^{i\theta} - 1 + \abs{U_{ts}}^2 \rbk{e^{i \theta} - 1}^2}^2 & \\ 
+                                                       & = (1 - \varepsilon) \cdot \abs{2e^{i\theta} - 1 + (1 - \varepsilon)\rbk{e^{i \theta} - 1}^2}^2 & \quad \rbk{\abs{U_{ts}}^2 = 1 - \varepsilon}\\ 
+        \end{alignedat}
+    \end{equation*}
+
+    Now, let's see what happens if we set $\theta = \tfrac{\pi}{3}$: we obtain that
+    \begin{equation*}
+        \begin{alignedat}{2}
+            \Pr[\mbox{measure}\rbk{G \ket s} = \ket t] & = (1 - \varepsilon) \cdot \abs{2e^{i \tfrac{\pi}{3}} - 1 + (1 - \varepsilon)\rbk{e^{i\tfrac{\pi}{3}} - 1}^2}^2 & \\ 
+                                                       & = (1 - \varepsilon) \cdot \abs{2e^{i \tfrac{\pi}{3}} - 1 - (1 - \varepsilon){i \tfrac{\pi}{3}}}^2 & \quad \rbk{\rbk{e^{i\tfrac{\pi}{3}} - 1}^2 = - e^{i \tfrac{\pi}{3}}} & \\ 
+                                                       & = (1 - \varepsilon) \cdot \abs{(1 + \varepsilon) e^{i \tfrac{\pi}{3}} - 1}^2 & \\ 
+                                                       & = (1 - \varepsilon) \cdot \abs{(1 + \varepsilon)\rbk{\dfrac{1}{2} + i \dfrac{\sqrt 4}{2}} - 1}^2 & \quad (\mbox{by Euler's formula}) & \\ 
+                                                       & = (1 - \varepsilon) \cdot \abs{\dfrac{1}{2} +i  \dfrac{\sqrt 3}{2} + \dfrac{\varepsilon}{2} + i \dfrac{\sqrt 3}{2} \varepsilon - 1}^2 & \\ 
+                                                       & = (1 - \varepsilon) \cdot \abs{\dfrac{\varepsilon}{2} - \dfrac{1}{2} + i \dfrac{\sqrt 3}{2}(1 + \varepsilon)}^2 &  \\ 
+                                                       & = (1 - \varepsilon) \cdot \sbk{\rbk{\dfrac{\varepsilon}{2} - \dfrac{1}{2}}^2 + \rbk{\dfrac{\sqrt 3}{2}(1 + \varepsilon)}^2 } & \quad \rbk{\abs{z}^2 = \Re^2(z) + \Im^2(z)} \\ 
+                                                       & = (1 - \varepsilon) \cdot (1 + \varepsilon + \varepsilon^2)&  \\ 
+                                                       & = 1 + \varepsilon + \varepsilon^2 - \varepsilon - \varepsilon^2 - \varepsilon^3 & \\ 
+                                                       & = 1 - \varepsilon^3 & \\ 
+        \end{alignedat}
+    \end{equation*}
+
+This shows that by applying $G$ the probability of measuring $\ket t$ has increased from $1 - \varepsilon$ to $1 - \varepsilon^3$.
+\end{proof}
+
+Indeed, it can be shown that by defining the following recursive sequence of operators $$\soe{ll}{U_0 := U & m = 0 \\ U_m = U_{m - 1} R_s U_{m-1}^\dag R_t U_{m - 1} & m \ge 1}$$ we get that $$\Pr[\mbox{measure}(\ket{U_m} \ket s) = \ket t] = \abk{\braket{t|U_ms}}^2 = 1 - \varepsilon^{2{q_m} + 1}$$ where $q_m$ is the number of queries of $f(x)$.
+
+TODO \todo{drawing of the vector that grows monotonically}
+
+Unfortunately, there already exists a classical probabilistic algorithm that the failure probability drops as $\varepsilon^{q + 1}$  after $q$ queries to $f$. Thus, the quantum advantage with this method is lost.
+
+So, what do we do now? In 2014 \textcite{yoder} proposed a fixed-point quantum serach algorithm that monotonically converges to the target state while still retaining the quadratic advantage of the original Grover's algorithm over classical algorithms. The algorithm involves phase-shift operators that are parametrized with angles different from $\theta = \tfrac{\pi}{3}$, and again involes building a sequence of operators using said phase shifts. However, the details of this result are way beyond the scope of our discussion, so we won't describe the details of their findings.
 
 \printbibliography % UNCOMMENT FOR BIBLIOGRAPHY
 
