--- a/src/references.bib
+++ b/src/references.bib
@@ -107,3 +107,16 @@
   year          = {2005},
   month         = oct
 }
+@article{yoder,
+  title         = {Fixed-Point Quantum Search with an Optimal Number of Queries},
+  volume        = {113},
+  issn          = {1079-7114},
+  url           = {http://dx.doi.org/10.1103/PhysRevLett.113.210501},
+  doi           = {10.1103/physrevlett.113.210501},
+  number        = {21},
+  journal       = {Physical Review Letters},
+  publisher     = {American Physical Society (APS)},
+  author        = {Yoder,  Theodore J. and Low,  Guang Hao and Chuang,  Isaac L.},
+  year          = {2014},
+  month         = nov
+}
