--- a/src/QuantumComputing.tex
+++ b/src/QuantumComputing.tex
@@ -1234,6 +1234,53 @@ So, what do we do now? In 2014 \textcite{yoder} proposed a fixed-point quantum s
 
 Before explainin the next algorithm that we are going to describe, we first need to present a very useful tool that is widely employed in various areas of computer science and matheamtics, such as integer multiplication, signal processing (e.g. speech recognition, audio compression) and much more.
 
+TODO \todo{magari capire meglio DFT}
+
+\begin{frameddefn}{$n$-th root of unity}
+    Given a commutative ring $R$, and a natural number $n \in N$, an element $\omega \in R$ is called \tbf{$n$-th root of unity} if $\omega ^n = 1$.
+\end{frameddefn}
+
+For instance, $-i$ is a $4$-th root of unity, in fact $(-i)^4 = 1$. We observe that, since multiplication in the complex plane is a rotation, the $n-$-th roots of 1 evenly divide the unit circle as shown below:
+
+TODO \todo{drawing}
+
+Now, among all possible $n$-th roots of unity we are going to provide a more specific definition. Let the \tbf{order of an $n$-th root of unity} $\omega$ be the smallest power $d$ such that $\omega^d = 1$. For instance, $(-1)^4 = 1$ indeed $-1$ is a $4$-th root of unity, however its order is 2 since $(-1)^2 = 1$ and $2 < 4$.
+
+\begin{frameddefn}{Principal $n$-th root of unity}
+    Given an $n$-th root of unity $\omega$, we say that $\omega$ is \tbf{principal} if and only if $\omega \neq 1$ and the order of $\omega$ is $n$.
+\end{frameddefn}
+
+In other words, the principal $n$-th root of unity is the first root (after 1) that we encounter on the unit circle. Indeed, by Euler's formula we know that $$e^{i \theta} = \cos \theta + i \sin \theta$$ which is why we usually define the principal $n$-th principal root of unity as $$\omega := e^{\tfrac{2 \pi i }{n}}$$ since $\tfrac{2 \pi}{n}$ is the $n$-th slice of the unit circle. Furthermore, the second condition of the definition is usually not provided in terms of order of the root, and it's written as follows $$\forall p \in [n - 1] \quad \sum_{j = 0 }^{n - 1}{\omega^{jp}} = 0$$ Aside from the geometric interpretation of this sum, this is a finite complex geometric series with common ratio $\omega^p$, which implies that
+
+\begin{itemize}
+    \item if $\omega^p = 1$, then every term is $(\omega^p)^j = 1^j = 1$ for any $j$, meaning that the sum is equal to $$\sum_{j = 0}^{n - 1}{\omega^{jp }} = \sum_{j = 0}^{n - 1}{1} = n$$
+    \item if $\omega^p \neq 1$, then we know that $$\sum_{j = 0}^{n - 1}{\omega^{jp }} = \dfrac{1 - (\omega^p)^n}{1 - \omega^p}$$ and this ratio is equal to 0 if and only if $$1 - (\omega^p)^n = 0 \iff \omega^{pn} = 1$$
+\end{itemize}
+
+Therefore, we have that this sum is equal to 0 if and only if $\omega^p \neq 1$ and $\omega^{pn} = 1$. However, we observe that if $\omega^p = 1$, since $p \in [n - 1]$ this would imply that the order of $\omega$ is less than $n$, meaning that $\omega$ was not a principal root.
+
+Principal $n$-th roots of unity are fundamental in order to describe the DFT matrix, as defined below.
+
+\begin{frameddefn}{Discrete Fourier Transform}
+    Given a commutative ring $R$ of dimension $N$, the \tbf{Discrete Fourier Transform (DFT)} matrix in $R$ is defined as follows: $$\forall j,k \in [0, N - 1] \quad \mbox{DFT}_{jk} = \tilde \omega^{jk}$$ where $\omega$ is the principal $N$-th root of unity, and $\tilde \omega = \omega ^{-1}$.
+\end{frameddefn}
+
+Therefore, in general the DFT matrix looks like this: $$\mbox{DFT} := \rmat{1 & 1 & 1 & \cdots & 1 \\ 1 & \tilde \omega & \tilde \omega^2 & \cdots & \tilde \omega^{N - 1} \\ 1 & \tilde \omega^2 & \tilde \omega^4 & \cdots & \tilde \omega^{2(N - 1)} \\ \vdots & \vdots & \vdots & \ddots & \vdots \\ 1 & \tilde \omega^{N - 1} & \tilde \omega^{2(N - 1)} & \cdots & \tilde \omega^{(N - 1)^2}}$$
+
+Note that, in simpler terms, we have that $$\forall j,k  \in [0, N - 1] \quad \mbox{DFT}_{jk} = \tilde \omega^{jk } = \omega^{-jk}$$ Why do we use $\tilde \omega$ instead of $\omega$? The reason is that this is just a convention to make hte frequency ordering increase as $k$ increases --- if we used $\omega^{jk}$, the Fourier basis would still be orthogonal, but the frequency ordering would be reversed, i.e $k = 0$ would correspond to the 0 frequency but $k = 1$ would correspond to the \tit{highest frequency}. Moreover, we usually define the DFT matrix by setting $\omega = e^{\tfrac{2 \pi i}{n}}$, thus getting $$\forall j , k \in [0, N - 1] \quad \mbox{DFT}_{jk} = e^{-2 \pi i j k /N}$$ (the matrix is usually written without the fraction notation).
+
+Why do we define the matrix of DFT with roots of unity? \todo{boh trova la risposta prima di scriverla}
+
+Interestingly enough, the DFT matrix is invertible, in fact we have that $$\forall j , k \in [0, N - 1] \quad \mbox{DFT}^{-1}_{jk } = \dfrac{1}{N}\tilde \omega^{-j k }= \dfrac{1}{N}\omega^{jk} = \dfrac{1}{\sqrt N}\omega^{+2 \pi i j k /N}$$ and this matrix takes the name of \tbf{Inverse Discrete Fourier Transform}.
+
+Now, we are going to define the quantum equivalent of the DFT, the so called \tbf{Quantum Fourier Transform}.
+
+\begin{frameddefn}{Quantum Fourier Transform}
+    Given a Hilbert space $\mathcal H$ of size $N$, the \tbf{Quantum Fourier Transform (QFT)} matrix in $\mathcal H$ is defined as follows: $$\forall j, k \in [0, N - 1] \quad \mbox{QFT}_{jk} = \dfrac{1}{\sqrt N}\tilde \omega^{-jk}$$ where $\omega$ is the principal $N$-th root of unity, and $\tilde \omega = \omega^{-1}$.
+\end{frameddefn}
+
+As we can see, the definition is fairly similar to the DFT one, except that the matrix is scaled by $\tfrac{1}{\sqrt N}$ as we usually to in quantum mechanics. Thus, in general the QFT matrix looks like this: $$\mbox{QFT} := \rmat{1 & 1 & 1 & \cdots & 1 \\ 1 & \tilde \omega & \tilde \omega^{-2} & \cdots & \tilde \omega^{-(N - 1)} \\ 1 & \tilde \omega^{-2} & \tilde \omega^{-4} & \cdots & \tilde \omega^{-2(N - 1)} \\ \vdots & \vdots & \vdots & \ddots & \vdots \\ 1 & \tilde \omega^{-(N - 1)} & \tilde \omega^{-2(N - 1)} & \cdots & \tilde \omega^{-(N - 1)^2}}$$ Furthermore, we observe that if the input is a basis vector $\ket k$, the output will be the $k$-th column of the QFT matrix, which can be succintly written as follows: $$\mbox{QFT} \ket k = \dfrac{1}{\sqrt N} \sum_{j = 0}^{N - 1} \tilde \omega^{-jk} \ket j = \dfrac{1}{\sqrt N} \sum_{j = 0}^{N - 1}e^{+2 \pi i j k / N} \ket j $$
+
 \printbibliography % UNCOMMENT FOR BIBLIOGRAPHY
 
 \end{document}
