--- a/src/QuantumComputing.tex
+++ b/src/QuantumComputing.tex
@@ -1232,9 +1232,36 @@ So, what do we do now? In 2014 \textcite{yoder} proposed a fixed-point quantum s
 
 \section{Quantum Fourier Transform}
 
-Before explainin the next algorithm that we are going to describe, we first need to present a very useful tool that is widely employed in various areas of computer science and matheamtics, such as integer multiplication, signal processing (e.g. speech recognition, audio compression) and much more.
+Before explaining the next algorithm that we are going to describe, we first need to present a very useful tool that is widely employed in various areas of computer science and mathematics, such as integer multiplication, signal processing (e.g. speech recognition, audio compression) and much more.
 
-TODO \todo{magari capire meglio DFT}
+\subsection{A recap on the DFT}
+
+The \tbf{Discrete Fourier Transform (DFT)} is a very powerful tool used in many applications and probably most widely known for its use in signal processing. Indeed, the Fourier transform is used to transform a signal defined on the \tit{time domain} into its equivalent in the \tit{frequency domain}. We will briefly explore the most important concepts that define the DFT to have a better understanding in order to the progress with its quantum counterpart.
+
+First, what is the \curlyquotes{time domain}? When we sample a signal, we usually sample such signal through some finite amount of time, and we discretize such time interval --- this is why we consider the Discrete Fourier transform. What we are interested in is to transform such signal into the \curlyquotes{frequency domain}, which essentially means to understand what frequencies of sinusoids contribute to our signal and in which percentage. To do this, we will use some concepts of Linear Algebra. Say that the signal we sampled is discretized into $N$ parts, thust our sample lives in the $\R^N$ space --- it is nothing but a vector of $N$ complex values which describe the signal at each timestep. When we say \curlyquotes{time domain}, what we mean is basically this exact vector, i.e. expressed in the canonical orthonormal basis $$e_0 = \rmat{1 \\ 0 \\ \vdots \\ 0 } \quad e_1 = \rmat{0 \\ 1 \\ \vdots \\ 0} \quad \ldots \quad e_{N - 1} = \rmat{0 \\ \vdots \\ 0 \\ 1}$$ (we will start counting at 0 for convenience). In other words, if our signal is defined by some vector $$\mathbf x = \rmat{t_0 \\ t_1 \\ \vdots \\ t_{N - 1}}$$ it holds that $$\mathbf x = \sum_{n = 0}^{N - 1}{t_n e_n}$$
+
+Then, what is the \curlyquotes{frequency domain}? We need some preliminary observations to describe it. Our goal is to take into account the frequencies that define our signal, therefore we need to move into a space in which frequencies are \curlyquotes{first-class citizens}. The idea is to use each possible sinusoid by varying the frequence, add up their contributions, and weight the latter in the precise way that allows us to reconstruct our original signal. Let us fix a component $n \in [0, N - 1]$, and first consider only cosinusoids, for instance $$\cos(2 \pi \cdot 0 \cdot n) \quad \cos(2 \pi \cdot 1 \cdot n) \quad \cos(2 \pi \cdot 2 \cdot n) \quad \ldots \quad \cos(2 \pi \cdot (N - 1) \cdot n)$$ Basically, we are trying to construct a basis built on each possible frequency $f$ by obtaining a basis vector $\cos(2 \pi \cdot f \cdot n)$. Moreover, we will consider $\cos (2 \pi m n / N)$ for $m \in [0, N - 1]$ since it can be shown that the number of possible frequencies that can be represented on a $N$-sized time window is exactly $N - 1$, and to scale the frequency accordingly we just need to divide $m$ over $N$, the size of the sample.
+
+Is this enough to reach our goal? Can we describe any signal in this way? Well, we observe that $m$ is ranging from $0$ to $N -1$, but $\cos(- \theta) = \cos(\theta)$, which implies that $$m > \dfrac{N}{2} \implies \cos(2 \pi m n/ N) = \cos(2 \pi (N - m) n / N)$$ In other words, basically half of our basis vectors add no information at all. Indeed, the span of the vectors we chose has size $$\dim \rbk{\mbox{span}\rbk{\cbk{\cos(2 \pi \cdot m\cdot n/ N)}_{m = 1}^{N - 1}}} = \soe{ll}{\tfrac{N}{2} + 1 & \mbox{$N$ is even} \\ \tfrac{N + 1}{2} & \mbox{$N$ is odd}} $$ where the last added 1 comes from the fact that when $m = 0$ we generate $\cos(0) = 1$ which is really linearly independent from the others cosines. This suggests that cosinusoids alone are not enough to describe our space.
+
+Hence, the most natural thing that we can do is add the contributions of sinusoids as well. A geometric interpretation of the fact that cosinusoids are not enough is that sinusoids are just phase-shifted cosines, but the shift in phase is not captured by changing the frequencies of the cosines alone. We need the contributions of some \curlyquotes{altered} cosinusoids --- in terms of phases --- to get an actual basis and be able to represent any possible vector. Hence, let's consider additional $N$ sinusoids $$\sin(2 \pi \cdot 0 \cdot n) \quad \sin(2 \pi \cdot 1 \cdot n) \quad \sin(2 \pi \cdot 2 \cdot n) \quad \ldots \quad \sin(2 \pi \cdot (N - 1) \cdot n)$$ Do we get a base of size more than $N$ then? We observe that $\sin(\theta) = - \sin (-\theta)$, therefore we have that $$m > \dfrac{N}{2} \implies \sin(2 \pi m n/N) = - \sin (2\pi (N - m) n/N)$$ which again it implies that half of these sinusoids add no useful information. However, in this case we also have the fact that $\sin(0) = \sin(\pi n) = 0$, which means that these two sinusoid cannot be considered because they are the 0 vector of this space. Therefore, we get that $$\dim \rbk{\mbox{span}\rbk{\cbk{\cos(2 \pi \cdot m\cdot n/ N)}_{m = 1}^{N - 1}}} = \soe{ll}{\tfrac{N}{2} - 1 & \mbox{$N$ is even} \\ \tfrac{N - 1}{2} & \mbox{$N$ is odd}}$$ Finally, this means that putting all these cosines and sinusoids together we form a base for a space that has size $$\soe{ll}{\tfrac{N}{2} + 1 + \tfrac{N}{2} - 1 = N & \mbox{$N$ is even} \\ \tfrac{N + 1}{2} + \tfrac{N - 1}{2} = N & \mbox{$N$ is odd}} = N$$ Hence, we can fully describe $\R^N$, namely for any vector $\mathbf x \in \R^N$ we have that $$\forall n \in [0, N- 1] \quad \mathbf x(n) = \sum_{m = 0}^{N - 1}{\alpha_m \cos(2\pi m n/N)} + \sum_{m = 0}^{N - 1}{\beta_m \sin(2\pi m n/N)}$$ by describing the vector component-wise.
+
+Furthermore, we observe that this basis is actually orthogonal. \todo{prove it, boring}
+
+Now, the last thing that we need to do is move into the complex space $\C^N$. Thankfully, we can leverage the very powerful Euler's formula $$e^{i \theta} = \cos \theta + i \sin \theta$$ to immediately some the contributions of cosinusoids and sinusoids into a single value $e^{2 \pi i m n/N}$. In other words, for any vector $\mathbf x \in \C^N$ it holds that $$\forall n \in [0, N - 1] \quad \mathbf x(n) = \sum_{m = 0}^{N - 1}{\gamma_m e^{2\pi i m n/N}}$$ The basis of this space is thus $$e^{2 \pi i \cdot 0 \cdot x / N} \quad e ^{2 \pi i \cdot 1 \cdot x / N } \quad \ldots \quad e^{2 \pi i \cdot (N - 1) \cdot n / N}$$ We observe that this basis is orthogonal as well, but it's not orthonormal in fact \todo{prove it, boring too} Hence, because the norm of each vector is
+\begin{equation*}
+    \begin{split}
+        \sqrt{\abk{e^{2 \pi i m n/N}|e^{2 \pi i mn/N}}} & = \sqrt{\sum_{n = 0}^{N - 1}{e^{2 \pi i mn/N} \cdot \overline{e^{2 \pi i mn/N}}}} \\ 
+                                                       & = \sqrt{\sum_{n = 0}^{N - 1}{\abs{e^{2 \pi i m n/ N}}^2}} \\ 
+                                                       & = \sqrt{\sum_{n = 0}^{N - 1}{1}} \\ 
+                                                       & = \sqrt N \\ 
+    \end{split}
+\end{equation*}
+we usually consider the same base but scaled by a factor of $\tfrac{1}{\sqrt N}$, i.e. $$\forall n \in [0, N - 1] \quad \mathbf x(n) = \dfrac{1}{\sqrt N}\sum_{m = 0}^{N - 1}{\delta_m e^{2\pi i m n/N}}$$ We define $\delta_m$ to be the $m$-th component of the \tbf{discrete Fourier transform} of $\mathbf x$, and the operation that reconstructs $\mathbf x(n)$ is called \tbf{inverse discrete Fourier transform}. In other words, the DFT of a vector computes the projection of said vector into the space $\C^N$ through the orthonormal basis $$\cbk{\tfrac{1}{\sqrt N}e^{2 \pi i m n/N}}_{m = 0}^{N - 1}$$ Indeed, we can compute the DFT by simply applying the matrix that performs the \tbf{change of basis}, but we will see the details of this idea in the next section.
+
+\subsection{Roots of unity}
+
+Now that we have a general understanding of what the DFT is, let's see how the matrix operation is actually defined.
 
 \begin{frameddefn}{$n$-th root of unity}
     Given a commutative ring $R$, and a natural number $n \in N$, an element $\omega \in R$ is called \tbf{$n$-th root of unity} if $\omega ^n = 1$.
@@ -1250,7 +1277,7 @@ Now, among all possible $n$-th roots of unity we are going to provide a more spe
     Given an $n$-th root of unity $\omega$, we say that $\omega$ is \tbf{principal} if and only if $\omega \neq 1$ and the order of $\omega$ is $n$.
 \end{frameddefn}
 
-In other words, the principal $n$-th root of unity is the first root (after 1) that we encounter on the unit circle. Indeed, by Euler's formula we know that $$e^{i \theta} = \cos \theta + i \sin \theta$$ which is why we usually define the principal $n$-th principal root of unity as $$\omega := e^{\tfrac{2 \pi i }{n}}$$ since $\tfrac{2 \pi}{n}$ is the $n$-th slice of the unit circle. Furthermore, the second condition of the definition is usually not provided in terms of order of the root, and it's written as follows $$\forall p \in [n - 1] \quad \sum_{j = 0 }^{n - 1}{\omega^{jp}} = 0$$ Aside from the geometric interpretation of this sum, this is a finite complex geometric series with common ratio $\omega^p$, which implies that
+In other words, the principal $n$-th root of unity is the first root (after 1) that we encounter on the unit circle. Indeed, thanks to Euler's formula we usually define the principal $n$-th principal root of unity as $$\omega := e^{2 \pi i /n}$$ since $\tfrac{2 \pi}{n}$ is the $n$-th slice of the unit circle. Furthermore, the second condition of the definition is usually not provided in terms of order of the root, and it's written as follows $$\forall p \in [n - 1] \quad \sum_{j = 0 }^{n - 1}{\omega^{jp}} = 0$$ Aside from the geometric interpretation of this sum, this is a finite complex geometric series with common ratio $\omega^p$, which implies that
 
 \begin{itemize}
     \item if $\omega^p = 1$, then every term is $(\omega^p)^j = 1^j = 1$ for any $j$, meaning that the sum is equal to $$\sum_{j = 0}^{n - 1}{\omega^{jp }} = \sum_{j = 0}^{n - 1}{1} = n$$
@@ -1259,7 +1286,7 @@ In other words, the principal $n$-th root of unity is the first root (after 1) t
 
 Therefore, we have that this sum is equal to 0 if and only if $\omega^p \neq 1$ and $\omega^{pn} = 1$. However, we observe that if $\omega^p = 1$, since $p \in [n - 1]$ this would imply that the order of $\omega$ is less than $n$, meaning that $\omega$ was not a principal root.
 
-Principal $n$-th roots of unity are fundamental in order to describe the DFT matrix, as defined below.
+Principal $n$-th roots of unity are fundamental in order to describe the DFT matrix, as defined below. \todo{remove tilde omega completely}
 
 \begin{frameddefn}{Discrete Fourier Transform}
     Given a commutative ring $R$ of dimension $N$, the \tbf{Discrete Fourier Transform (DFT)} matrix in $R$ is defined as follows: $$\forall j,k \in [0, N - 1] \quad \mbox{DFT}_{jk} = \tilde \omega^{jk}$$ where $\omega$ is the principal $N$-th root of unity, and $\tilde \omega = \omega ^{-1}$.
